--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest",
     "test-watch": "jest -w",
     "build": "tsc",
-    "watch": "tsc"
+    "watch": "tsc -w"
   },
   "repository": {
     "type": "git",
