updating test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,8 @@
 name: unit tests
 on:
-  push:
-    branches: [master]
   pull_request:
+  workflow_dispatch:
+  push:
     branches: [master]
 
 jobs:
